--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2018"
 
 [dependencies]
 anyhow = "^1.0"
-serde = "^1.0"
-serde_yaml = "0.8"
+serde = { version = "^1.0", features = ["derive"] }
+serde_json = "1.0"
