--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,6 @@ edition = "2018"
 anyhow = "^1.0"
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "1.0"
+typetag = "^0.1"
 boolinator = "2.4.0"
+dashmap = { version = "^4.0", features = ["serde"] }
