--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "^1.0"
+anyhow = "^1.0" # Ad hoc Error type.
+boolinator = "2.4.0" # bool to others
+dashmap = { version = "^4.0", features = ["serde"] } # concurrency
+steel-cent = "0.2.3" # Money lib
+
+# serde
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "1.0"
 typetag = "^0.1"
-boolinator = "2.4.0"
-dashmap = { version = "^4.0", features = ["serde"] }
